
  - Add support for:
    1) automatically adding a site_scons subdirectory (in the top-level
       SConstruct directory) to sys.path (PYTHONPATH);
    2) automatically importing site_scons/site_init.py;
    3) automatically adding site_scons/site_tools to the toolpath.

  From John Pye:

  - Change ParseConfig() to preserve white space in arguments passed in
    as a list.



RELEASE 0.96.94 - Sun, 07 Jan 2007 18:36:20 -0600

  NOTE:  This is a pre-release of 0.97 for testing purposes.

  From Anonymous:

  - Allow arbitrary white space after a SWIG %module declaration.

  From Paul:

  - When compiling resources under MinGW, make sure there's a space 
    between the --include-dir option and its argument.

  From Jay Kint:

  - Alleviate long command line issues on Windows by executing command
    lines directly via os.spawnv() if the command line doesn't need
    shell interpretation (has no pipes, redirection, etc.).

  From Walter Franzini:

  - Exclude additional Debian packaging files from the copyright check.

  From Fawad Halim:

  - Handle the conflict between the impending Python 2.6 'as' keyword
    and our Tool/as.py module name.

  From Steven Knight:

  - Speed up the Node.FS.Dir.rel_path() method used to generate path names
    that get put into the .sconsign* file(s).

  - Optimize Node.FS.Base.get_suffix() by computing the suffix once, up
    front, when we set the Node's name.  (Duh...)

  - Reduce the Memoizer's responsibilities to simply counting hits and
    misses when the --debug=memoizer option is used, not to actually
    handling the key calculation and memoization itself.  This speeds
    up some configurations significantly, and should cause no functional
    differences.

  - Add a new scons-time script with subcommands for generating
    consistent timing output from SCons configurations, extracting
    various information from those timings, and displaying them in
    different formats.
